fixed gaps and padding in .content and its content

--- a/styles.css
+++ b/styles.css
@@ -356,13 +356,15 @@ header p:last-of-type {
   grid-template-columns: 2.5fr 1fr;
   grid-template-rows: 1fr 1fr;
   box-shadow: 0.5em 0.5em 0.5em 0.5em rgba(0, 0, 0, 0.308);
+  padding: 1em 1em 0 1em;
+  gap: 1em;
 }
 
-.projects,
+/* .projects,
 .announcements,
 .trending {
   padding: 1.2em 0.75em;
-}
+} */
 
 .projects {
   grid-area: 1 / 1 / 3 / 2;
@@ -370,7 +372,6 @@ header p:last-of-type {
   gap: 0.5em;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1.2em 0.75em 0 0.75em ;
 }
 
 .content > div > p {
@@ -385,7 +386,9 @@ header p:last-of-type {
   grid-template-rows: repeat(3, 1fr);
   grid-auto-rows: 1fr;
   gap: 1em;
-  padding: 0 0 1.2em 0;
+  /* padding: 0 0 1.2em 0; */
+  padding: 0 0 1em 0 ;
+
 }
 
 .card {
@@ -455,7 +458,7 @@ header p:last-of-type {
 }
 
 .content .announcements {
-  padding: 1.2em 0.75em 1.2em 0.25em;
+  /* padding: 1.2em 0.75em 1.2em 0.25em; */
   grid-area: 1 / 2 / 2 / 3;
   display: flex;
   gap: 0.5em;
@@ -465,7 +468,7 @@ header p:last-of-type {
 }
 
 .announcements > div {
-  gap: 1em;
+  gap: 0.5em;
   flex: 1;
   border-radius: 0.3em;
   background-color: white;
@@ -498,9 +501,9 @@ header p:last-of-type {
 
 .content .trending {
   grid-area: 2 / 2 / 3 / 3;
-  padding: 0 0.75em 1.2em 0.25em;
+  padding: 0 0 1em 0 ;
   display: flex;
-  /* gap: 0.5em; */
+  gap: 0.5em;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
